kubernetes/main/apps/kube-tools/kyverno/policies/inject-timezone.yaml
---
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: inject-timezone
  annotations:
    policies.kyverno.io/title: Inject timezone
    policies.kyverno.io/category: Other
    policies.kyverno.io/subject: Pod
    policies.kyverno.io/description: >-
      This policy injects an initContainer to Pods and setup TZ
      environment variable so the container will have the correct
      time.
spec:
  rules:
    - name: inject-timezone
      match:
        any:
          - resources:
              kinds:
                - Pod
      exclude:
        any:
          - resources:
              annotations:
                kyverno-no-tz: "true"
      mutate:
        patchStrategicMerge:
          spec:
            initContainers:
              - name: provide-timezone
                image: quay.io/k8tz/k8tz:0.16.1@sha256:0fc2048f836d5d42120992dd4c3a1b8eed2811ae3c7b2dc6f014c477391e8c2d
                imagePullPolicy: IfNotPresent
                resources:
                  requests:
                    cpu: 10m
                    memory: 100Mi
                volumeMounts:
                  - mountPath: /mnt/zoneinfo
                    name: timezone
                args:
                  - bootstrap
            containers:
              - (name): "*"
                volumeMounts:
                  - mountPath: /etc/localtime
                    name: timezone
                    readOnly: true
                    subPath: &timezone Europe/Lisbon
                  - mountPath: /usr/share/zoneinfo
                    name: timezone
                    readOnly: true
                env:
                  - name: TZ
                    value: *timezone
            volumes:
              - name: timezone
                emptyDir: {}
